# libpkgmanifest

./: CMakeLists.txt  GNUmakefile  libpkgmanifest.spec  meson.build  meson_options.txt
include/: meson.build
include/libpkgmanifest/: meson.build
include/libpkgmanifest/common/: meson.build
include/libpkgmanifest/input/: meson.build
include/libpkgmanifest/manifest/: meson.build
src/: CMakeLists.txt  meson.build
